--- a/css/style.css
+++ b/css/style.css
@@ -128,4 +128,13 @@ img {
     SOLUZIONE RESPONSIVE
  ************************************************/
 
- 
+ @media screen and (max-width: 768px) {
+
+    .container {
+            max-width: 768px;
+            margin: auto;
+
+     }
+
+}
+
