--- a/css/style.css
+++ b/css/style.css
@@ -128,13 +128,27 @@ img {
     SOLUZIONE RESPONSIVE
  ************************************************/
 
- @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
     .container {
-            max-width: 768px;
-            margin: auto;
-
+        max-width: 768px;
+        margin: auto;
      }
-
 }
 
+@media screen and (max-width: 480px) {
+
+    .container {
+        max-width: 480px;
+     }
+
+    .col {
+        width: 100%;
+    }
+
+    .row {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+    }
+}
