--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ img {
 @media screen and (max-width: 768px) {
 
     .container {
-        max-width: 768px;
+        width: 100%;
         margin: auto;
      }
 }
@@ -139,7 +139,7 @@ img {
 @media screen and (max-width: 480px) {
 
     .container {
-        max-width: 480px;
+        width: 100%;
         margin: auto;
     }
 
