--- a/css/style.css
+++ b/css/style.css
@@ -143,10 +143,13 @@ img {
         margin: auto;
     }
 
-    .row {
-        flex-direction: column;
-        display: flex;
-        align-items: center;
+    .row{
+        flex-wrap: wrap;
+    }
+
+    .lessons .col, .steps .col, .why-us .col{
+        width: 100%;
+        
     }
 
 }
