--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ img {
 }
 
 @media screen and (min-width:768px) and (max-width:1160px) {
-    .steps{
-        max-width: 1160px;
+    .container{
+        width: 100%;
     }
 }
